add new release APK

--- a/app/src/main/res/layout/fragment_getting_started_3.xml
+++ b/app/src/main/res/layout/fragment_getting_started_3.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/round_corner_bg_white"
+        android:backgroundTint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:text="Get Started"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
