--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,5 @@
     <color name="pinkAccent">#ff4081</color>
     <color name="transparentWhite">#27FFFFFF</color>
     <color name="darkGray">#404040</color>
-    <color name="screenBackground">#D9F2FD</color>
+    <color name="screenBackground">#CFEFFD</color>
 </resources>
