--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="-9dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -48,7 +50,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/hour_description"
+                android:id="@+id/user_description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -64,9 +66,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="Instructor"
-                app:layout_constraintEnd_toEndOf="@+id/hour_description"
-                app:layout_constraintStart_toStartOf="@+id/hour_description"
-                app:layout_constraintTop_toBottomOf="@+id/hour_description" />
+                android:textStyle="bold|italic"
+                app:layout_constraintEnd_toEndOf="@+id/user_description"
+                app:layout_constraintStart_toStartOf="@+id/user_description"
+                app:layout_constraintTop_toBottomOf="@+id/user_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
