--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -22,7 +22,7 @@
 
     <item
         android:id="@+id/bottom_nav_jobs"
-        android:title="Jobs"
+        android:title="Freelance"
         android:icon="@drawable/jobs"
         app:cnb_iconColor="@color/colorWhite"
         app:cnb_backgroundColor="@color/colorPrimaryDark"
